<resources>
    <string name="app_name">CocktailsApp</string>
    <string name="sequels_and_prequels"><u>Sequels and Prequels</u></string>
    <string name="actors">Actors</string>
    <string name="about_movie">About Movie:</string>
    <string name="production_date">Production date:</string>
    <string name="country">Country:</string>
    <string name="genres">Genres:</string>
    <string name="director">Director:</string>
    <string name="runtime">Runtime</string>
    <string name="reviews">Reviews</string>
    <string name="rating">Rating:</string>
</resources>