

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@color/black"

        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="181dp"
            android:layout_height="330dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/titlle1"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="Title"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textview5"
            android:layout_width="53dp"
            android:layout_height="19dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="144dp"
            android:text="@string/runtime"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textview4" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="77dp"
            android:layout_height="26dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="144dp"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textview4" />

        <TextView
            android:id="@+id/textview4"
            android:layout_width="102dp"
            android:layout_height="26dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/production_date"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/about" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="55dp"
            android:layout_height="26dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/country"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textview4" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="199dp"
            android:layout_height="26dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/textview" />

        <TextView
            android:id="@+id/date"
            android:layout_width="77dp"
            android:layout_height="26dp"
            android:layout_marginStart="124dp"
            android:layout_marginTop="24dp"
            android:textColor="#938D8D"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/about" />

        <TextView
            android:id="@+id/director"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="92dp"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textview4" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="52dp"
            android:text="@string/genres"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textview4" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="92dp"
            android:text="@string/director"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textview4" />

        <TextView
            android:id="@+id/country"
            android:layout_width="120dp"
            android:layout_height="26dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="12dp"
            android:textColor="#938D8D"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textview4" />

        <TextView
            android:id="@+id/about"
            android:layout_width="192dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/about_movie"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/titlle1" />


        <ImageView
            android:id="@+id/star1"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star10"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="368dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star8"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="292dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star7"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="252dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star6"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="212dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="172dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star9"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="328dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="229dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sequelsRecyclerView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="347dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="320dp"
            android:text="@string/sequels_and_prequels"
            android:textColor="@color/white"
            android:textSize="25sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/actorsTextView"
            android:layout_width="347dp"
            android:layout_height="39dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:text="@string/actors"
            android:textColor="@color/white"
            android:textSize="25sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sequelsRecyclerView"
            android:layout_width="415dp"
            android:layout_height="239dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:id="@+id/reviewsRecyclerView"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtReviews" />

        <TextView
            android:id="@+id/txtReviews"
            android:layout_width="153dp"
            android:layout_height="44dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="48dp"
            android:text="@string/reviews"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/star4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actorsRecyclerView"
            android:layout_width="415dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actorsTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


